--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.5.0
   file_picker: ^10.3.3
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,9 @@ flutter:
   uses-material-design: true
   assets:
     - assets/login/
+    - .env
+    
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
