--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   http: ^1.5.0
   file_picker: ^10.3.3
   flutter_dotenv: ^6.0.0
+  table_calendar: ^3.2.0
+  provider: ^6.1.5+1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
