--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_local_notifications: ^17.1.0
+  timezone: ^0.9.2
+  permission_handler: ^11.0.1
   http: ^1.5.0
   file_picker: ^10.3.3
   flutter_dotenv: ^6.0.0
