--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
     - assets/repositorio/
     - assets/login/
     - .env
+    - assets/homedocente/FOTO-FACHADA-SABANAS112.jpg
     
 
 
